force-app/main/default/objects/Listas_para_cumplimiento__c/Listas_para_cumplimiento__c.object-meta.xml
<CustomObject>
    <description>para carga de listas de oficiales de cumplimiento</description>
    <label>Listas para cumplimiento</label>
    <nameField>
        <label>Listas para cumplimiento Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listas para cumplimiento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>