force-app/main/default/objects/Listas_para_cumplimiento__c/fields/C0digo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>C0digo_de_cliente__c</fullName>
    <description>Código del cliente, no necesariamente debe de estar lleno</description>
    <label>Código de cliente</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>