force-app/main/default/objects/Listas_para_cumplimiento__c/fields/Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Identificacion__c</fullName>
    <description>Almacena la identificación de una persona</description>
    <externalId>true</externalId>
    <label>Identificación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>