force-app/main/default/objects/Listas_para_cumplimiento__c/fields/Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_cliente__c</fullName>
    <description>Nombre del cliente en la lista</description>
    <label>Nombre del cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>