force-app/main/default/objects/Listas_para_cumplimiento__c/fields/Tipo_de_lista__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_lista__c</fullName>
    <description>Tipo de lista que se va a cargar</description>
    <label>Tipo de lista</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requerimiento de información</fullName>
            </value>
            <value>
                <fullName>Lista RI</fullName>
                <isActive>false</isActive>
                <label>Lista RI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>