force-app/main/default/objects/Listas_para_cumplimiento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_del_cliente__c</columns>
    <columns>Identificacion__c</columns>
    <columns>C0digo_de_cliente__c</columns>
    <columns>Tipo_de_lista__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>